# fixation_prediction

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
configs/data/: salicon.yaml
configs/model/: unet.yaml
configs/training/: default.yaml
notebooks/: 01_explore_salicon.ipynb
scripts/: visualize_salicon_data.py
src/fixation_prediction/data/: salicon.py  utils.py
