[project]
name = "fixation-prediction"
version = "0.1.0"
description = "Predicting radiologist fixations on medical images using saliency models"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Hongwei Lin", email = "lhwarriveworld@gmail.com" }
]
keywords = ["deep-learning", "medical-imaging", "saliency", "eye-tracking", "pytorch","fixation-prediction"]

dependencies = [
    "torch>=2.5,<3",
    "torchvision>=0.20",
    "numpy>=1.26",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "pillow>=10.0",
    "scikit-image>=0.22",
    "opencv-python>=4.8",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "pydicom>=2.4",
    "SimpleITK>=2.3",
    "wandb>=0.16",
    "tensorboard>=2.15",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
]

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "notebook>=7.0",
    "ipywidgets>=8.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fixation_prediction"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu121" }]
torchvision = [{ index = "pytorch-cu121" }]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true